# vcf_to_bgen

./: .gitignore  Cargo.toml  Dockerfile
src/: lib.rs  main.rs
tests/: read_variants.rs  vcf_data_reading.rs
