[package]
name = "vcf_to_bgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
flate2 = { version = "1.0.34" }
vcf = "0.6.1"
bgen_reader = { git = "https://github.com/leohscl/bgen_reader" }
nom = "7.1.3"
indicatif = "0.17.8"
clap = { version = "4.5.20", features = ["derive"] }
